--- a/app/src/main/res/layout/activity_add_budget_item.xml
+++ b/app/src/main/res/layout/activity_add_budget_item.xml
@@ -42,10 +42,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:hint="@string/amount_input"
             android:inputType="numberDecimal"
-            android:textSize="16sp"
-            android:background="@android:color/transparent" />
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/clearAmount"
